# drone-weact-blinky

./: Cargo.toml  Drone.toml  Justfile  LICENSE  README.md
src/: bin.rs  clock.rs  consts.rs  led.rs  lib.rs  thr.rs
src/tasks/: root.rs
