cargo-features = ["resolver"]

[package]
name = "weact-blinky"
version = "0.2.0"
authors = ["Dave Hylands <davehylands@fullstory.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weact-blinky"
path = "src/bin.rs"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    "futures/std",
]
heaptrace = ["drone-core/heaptrace"]

[dependencies]
drone-stm32f4-utils = { git = "https://github.com/dhylands/drone-stm32f4-utils" }
#drone-stm32f4-utils = { path = "../drone-stm32f4-utils" }
drone-core = { version = "0.12.0" }
drone-cortexm = { version = "0.12.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"] }
drone-stm32-map = { version = "0.12.1", features = ["adc", "dma", "exti", "gpio", "tim"] }
futures = { version = "0.3.0", default-features = false }

[profile.release]
lto = true
debug = true
panic = "abort"
